--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
 	margin:0;
 	padding: 0;
@@ -80,20 +81,11 @@ header {
 }
 .home-img img {
 	animation: animate 3s linear infinite;
-      
 }
 @keyframes animate {
-    0% {
-    transform: translate(-11px,0);
-    }
-    50% {
-        transform: translate(-0px, -11px);
-    }
-    100% {
-    transform:translate(-11px,0);
-    }
-
-
+    0% { transform: translate(-11px,0); }
+    50% { transform: translate(-0px, -11px); }
+    100% { transform:translate(-11px,0); }
 }
 .home-text span {
 	font-size: 1rem;
@@ -152,7 +144,7 @@ header {
 	flex-direction: column;
 	align-items: center;
 	margin-right: 3rem;
-	border-radius: 0.5rem; 
+	border-radius: 0.5rem;
 }
 .shop-container .box .box-img {
 	width: 150px;
@@ -163,7 +155,7 @@ header {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
-	object-position: center; 
+	object-position: center;
 }
 .stars {
 	margin: 1rem 0 0.1rem;
@@ -206,7 +198,7 @@ header {
 .delivery-text h2,
 .app-text h2 {
 	font-size: 1.2rem;
-	color: var(--seccond-color);
+	color: var(--second-color);
 }
 .delivery-text p,
 .app-text p {
@@ -227,7 +219,7 @@ header {
 }
 .about-text h2{
 	font-size: 1.2rem;
-	color: var(--seccond-color);
+	color: var(--second-color);
 }
 .about-text p {
 	margin: 0.5rem 0 1rem;
@@ -253,7 +245,6 @@ header {
 }
 .links {
 	margin: 1rem 0 1rem;
-	
 }
 .links a {
 	font-size: 1rem;
@@ -267,6 +258,7 @@ header {
 .contact p {
 	text-align: center;
 }
+
 @media (max-width: 1150px){
 	header{
 		padding: 18px 7%;
@@ -288,7 +280,6 @@ header {
 	section{
 		padding: 50px 4%;
 	}
-	
 }
 @media (max-width: 768px){
 	header{
@@ -344,7 +335,6 @@ header {
 	.about{
 		flex-direction: column-reverse;
 	}
-	
 }
 @media(max-width: 364px){
 	.links {
@@ -368,7 +358,6 @@ header {
 		transform: translate(0);
 	}
 }
-
 .container {
 	animation-name: slideInleft ;
 	animation-duration: 1s;
@@ -388,5 +377,4 @@ header {
 	animation-direction: normal;
 	animation-fill-mode: both;
 	transform : translate(-150px);
-	
 }
